--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "@ionic-native/splash-screen": "5.0.0-beta.21",
     "@ionic-native/status-bar": "5.0.0-beta.21",
     "@ionic/angular": "4.0.0-beta.12",
+    "@ionic/storage": "^2.2.0",
+    "@pdestrais/mdtohtml": "0.0.1",
+    "c-coffee-icon": "0.0.2",
     "core-js": "^2.5.3",
     "rxjs": "6.2.2",
     "zone.js": "^0.8.26"
