First nearly functional release using using cloudant

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@pdestrais/mdtohtml": "0.0.1",
     "c-coffee-icon": "0.0.2",
     "core-js": "^2.5.3",
+    "pouchdb": "^6.4.2",
     "rxjs": "6.2.2",
     "zone.js": "^0.8.26"
   },
